--- a/Neural Networks Intuition - Simplest NN Example.ipynb
+++ b/Neural Networks Intuition - Simplest NN Example.ipynb
@@ -121,9 +121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "Output = input * weight + bias\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
