--- a/Neural Networks Intuition - Simplest NN Example.ipynb
+++ b/Neural Networks Intuition - Simplest NN Example.ipynb
@@ -60,9 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "Output = f(i_1 * w_1 + i_2 * w_2 + i_3 * w_3 + i_4 * w_4 + bias)\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -137,18 +137,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "input * weight + bias = 0 * weight + bias = 1\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "bias = 1\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -162,18 +162,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "input * weight + bias = 1 * weight + 1 = weight + 1 = 0 \n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "weight = -1\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -201,9 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "Output = input * 0.5 + 0.5\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
