--- a/Neural Networks Intuition - Simplest NN Example.ipynb
+++ b/Neural Networks Intuition - Simplest NN Example.ipynb
@@ -224,9 +224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "C = \\frac{1}{2} (y - Output)^2\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -247,9 +247,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "C = \\frac{1}{2} (1 - (0 * 0.5 + 0.5))^2 = \\frac{1}{2} (1 - 0.5)^2 = \\frac{1}{2} (.25) = .125\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -263,9 +263,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "C = \\frac{1}{2} (0 - (1 * 0.5 + 0.5))^2 = \\frac{1}{2} (0 - 1)^2 = \\frac{1}{2} (1) = .5\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
