--- a/Neural Networks Intuition - Simplest NN Example.ipynb
+++ b/Neural Networks Intuition - Simplest NN Example.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://www.otexts.org/sites/default/files/fpp/images/nnet1.png\" heigh=\"400\" width=\"400\" />"
+    "<img src=\"NN_first_example.png\" height=\"200\" width=\"400\" />"
    ]
   },
   {
@@ -91,13 +91,6 @@
    "metadata": {},
    "source": [
     "<img src=\"Simplest NN Diagram.png\" height=\"500\" width=\"500\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This network is so simple, can it even learn anything? Yes! We'll work on teaching it the NOT operation, which should give an Output of 0 for an input of 1, and an Output of 1 for an input of 0. First, let's look at how we calculate the Output. To make things even simpler, we're going to use the identity function, $f(x) = x$, for the activation function (the identity function does nothing, so it can be omitted):"
    ]
   },
   {
@@ -210,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the input is $0$, the Output will be $0 * 0.5 + 0.5 = 0.5$. When the input is $1$, the Output will be $1 * 0.5 + 0.5 = 1$. This is clearly not the NOT operation! We can tell, because our actual Output is not the same as our expected Output."
+    "When the input is $0$, the Output will be $0 * 0.5 + 0.5 = 0.5$ instead of $1$. When the input is $1$, the Output will be $1 * 0.5 + 0.5 = 1$ instead of $0$. This is clearly not the NOT operation! We can tell, because our actual Output is not the same as our expected Output."
    ]
   },
   {
